ingressroute-websecure-gpu03-nip.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security
  namespace: my-determined
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: determined-websecure-nip
  namespace: my-determined
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`determined.83-206-89-106.nip.io`)
      kind: Rule
      services:
        - name: determined-master-service-my-determined
          port: 8080
      middlewares:
      - name: security
  tls:
    certResolver: letsencrypt
